trunk/Archive2/49/0c0b5bb17fdc50/output
main.cpp: In function 'int main()':
main.cpp:18:11: error: use of deleted function 'D1::D1(int)'
     D1 d(5);
           ^
main.cpp:13:17: note: 'D1::D1(int)' is implicitly deleted because the default definition would be ill-formed:
     using Base::Base;
                 ^
main.cpp:13:17: error: use of deleted function 'Base::Base()'
main.cpp:4:5: note: declared here
     Base() = delete;
     ^
